# vin

./: CMakeLists.txt  DOT503A2.cpp  DOT503A2.sln  DOT503A2.vcxproj  DOT503A2.vcxproj.filters  DOT503Test.cpp  README.md
.github/workflows/: cmake.yml
Debug/: DOT503A2.ilk  vc142.idb
Debug/DOT503A2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DOT503A2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
